# torch_service

./: .gitignore  Cargo.toml  README.md
src/: app_config.rs  lib.rs  main.rs
src/dataframe/: mod.rs  torch_tensor.rs
src/handlers/: predict.rs
src/models/: data.rs  mod.rs  torch_model.rs
src/operator/: mod.rs  operator.rs
src/operator/pipeline/: torch_pipeline.rs
src/operator/predicting/: torch_predictor.rs
src/repository/: mod.rs  predict_repository.rs
src/utils/: image_utils.rs
src/wrapper/: minist_nn_wrapper.rs  mod.rs
