[package]
name = "torch_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.10.0"
actix-form-data = "0.6.2"
actix-multipart = "0.4.0"
futures-util = "0.3"
futures = "0.3"
futures-core = "0.3"
image = "0.24.5"
show-image = "0.13.1"
glam = "0.22.0"
bytes = "1"